# atlantis-fastapi

./: .envdev  .gitignore  AI_CONTEXT.md  ARCHITECTURE_IMPROVEMENTS.md  AUTOMATION_ROADMAP.md  BACKEND_ARCHITECTURE_PROPOSAL.md  DEVELOPMENT_GUIDELINES.md  Dockerfile  Dockerfile.txt  FINANCIAL_SERVICE_DESIGN.md  README.md  REFACTORING_ROADMAP.md  ROADMAP.md  ROLE_AUTHORIZATION_GUIDE.md  alembic.ini  create_owner.py  docker-compose-test.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  temp_financial_service_todo.md  test_auto_unfreeze.db  test_database.db  test_database.db-journal  test_freeze.db
.cursor/rules/: always-read-docs-before-responding.mdc  master-roadmap.mdc  run-everything-via-poetry.mdc  run-everything-via-uv.mdc  student-module.mdc
alembic/: env.py
alembic/versions/: 054b3575a044_add_performance_indexes_to_core_models.py  (+82 more)
app/: config.py  database.py  dependencies.py  main.py
docs/: README.md  auto-unfreeze-feature.md  implementation-plan.md  simple-role-authorization.md
tests/: conftest.py  test_active_subscription_check.py  test_active_subscription_id.py  test_auto_unfreeze.py  test_client.py  test_daily_operations.py  test_financial_integration.py  test_freeze_logic.py  test_invoice.py  test_payment.py  test_real_training.py  test_real_training_financial_flow.py  test_real_trainings.py  test_simple_role_auth.py  test_student.py  test_subscription.py  test_trainer.py  test_trainer_payments.py  test_trainer_registered_payments.py  test_training_processing.py  test_training_schedule.py  test_training_type.py  test_user.py
(+184 files in other folders)
