[project]
name = "atlantis-fastapi"
version = "0.1.0"
description = "Sistema de gestión para centro fitness/escuela deportiva"
authors = [
    {name = "Andrei Ryzhykau", email = "rorychan.ps5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "databases>=0.9.0,<0.10.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "cffi>=1.17.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "rsa>=4.9,<5.0",
    "python-jose>=3.3.0,<4.0.0",
    "alembic>=1.14.1,<2.0.0",
    "authlib>=1.4.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "google-auth>=2.38.0,<3.0.0",
    "google-auth-oauthlib>=1.2.1,<2.0.0",
    "google-auth-httplib2>=0.2.0,<0.3.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "coverage>=7.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.1.0,<0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "postgres_data*", "tests*"]
